# failsafe-project

./: .gitignore  README.md  failsafe_kb.json  pyproject.toml
failsafe/: __init__.py  cache.py  cli.py  llm.py  sync.py  tracking.py
failsafe/agents/: __init__.py  analyzer.py  coder.py  explorer.py  indexer.py  interview.py  reviewer.py
failsafe/graph/: __init__.py  coding.py  discovery.py
failsafe/knowledge/: __init__.py  embedder.py  enricher.py  models.py  patcher.py  store.py  updater.py  vector_store.py
failsafe/state/: __init__.py  coding.py  discovery.py
failsafe/tools/: __init__.py  code_edit.py  execution.py  filesystem.py  interaction.py
failsafe/ui/: __init__.py  menu.py  session.py  setup.py
